# marketplace

./: .env.example  .gitignore  README.md  compose.yaml
b2b/: Dockerfile  pyproject.toml
b2b/alembic/: env.py
b2b/alembic/versions/: 20260608_0947_47a0fe2265c7_init.py
b2b/app/: main.py  models.py
b2b/app/api/v1/: __init__.py  auth.py  inventory.py  invoices.py  moderation_events.py  patch_endpoints.py  products.py  sellers.py  skus.py
b2b/app/core/: config.py  dependencies.py
b2b/app/db/: __init__.py  base.py  session.py
b2b/app/schemas/: auth.py  common.py  inventory.py  invoices.py  moderation_events.py  patch_schemas.py  products.py  skus.py
b2b/app/services/: delete_service.py  edit_service.py  inventory.py  invoices.py  moderation_events.py  products.py  skus.py
b2b/tests/: conftest.py  test_b2b03.py  test_b2b04.py  test_b2b05.py  test_b2b06.py  test_b2b07.py  test_b2b08.py  test_b2b09.py  test_b2b10.py  test_b2b11.py  test_b2b12.py  test_health.py  test_products.py  test_skus.py
b2c/: Dockerfile  alembic.ini  pyproject.toml
b2c/alembic/: env.py
b2c/app/: main.py
b2c/tests/: conftest.py  test_cart.py  test_catalog.py  test_orders.py
moderation/: Dockerfile  pyproject.toml
moderation/alembic/: env.py
moderation/app/: main.py  models.py
moderation/tests/: conftest.py  test_b2b_events.py  test_blocking_reasons.py  test_ticket_approve.py  test_ticket_block.py  test_ticket_hard_block.py  test_ticket_queue.py
shared/: service_auth.py
shared/auth/: jwt.py
shared/errors/: http.py
shared/pagination/: schemas.py
(+43 files in other folders)
