[project]
name = "neomarket-b2b"
version = "0.1.0"
description = "NeoMarket B2B Service"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "aiofiles==25.1.0",
    "alembic==1.18.0",
    "asyncpg==0.31.0",
    "bcrypt==5.0.0",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "email-validator==2.2.0",
    "pydantic==2.12.0",
    "pydantic-settings==2.6.0",
    "python-jose==3.5.0",
    "python-multipart==0.0.22",
    "python-dotenv==1.2.2",
    "sqlalchemy==2.0.48",
    "uvicorn==0.32.0",
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"